--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         rel="noopener noreferrer"
         >آموزش ثبت نام در گیت هاب</a
       >
-      <a href="https://git-scm.com" target="_blank" rel="noopener noreferrer"
+      <a href="https://github.com" target="_blank" rel="noopener noreferrer"
         >سایت Github</a
       >
       <h5>
@@ -206,7 +206,7 @@
 
       <hr />
       <h1>2.مرحله نهم</h1>
-      <h5>بعد از ساختن رپازتوری, به صفحه مخصوص رپازتوریتون وارد میشین</h5>
+      <h5>بعد از ساختن رپازتوری, به صفحه مخصوص رپازتوریتون ری دایرکت میشین</h5>
       <img src="./images/صفحه_رپو.png" alt="صفحه_رپو" />
 
       <hr />
@@ -274,8 +274,8 @@
 
       <hr />
       <h3 style="text-align: center">
-        کار آنلاین کردن سایت, تموم شد. <br />
-        حالا چند ثانیه و یا دقیقه محلت بدین تا سایت کامل اوکی بشه. <br />
+        کار ج‍َمعه. <br />
+        حالا چند ثانیه و یا دقیقه مهلت بدین تا سایت کامل اوکی بشه. <br />
         خب دیگه, حالا اگه برین به این آدرس میتونین سایتتون رو آنلاین ببینین.
         <br />
         <h2 dir="ltr" id="h2">
@@ -306,3 +306,4 @@
     </script>
   </body>
 </html>
+
